# visual-similarity-search

./: .env  .env-local  .env_template  .gitignore  Dockerfile  Dockerfile-interactive  Dockerfile-qdrant-preload  LICENSE  Makefile  README.md  demo-api.ipynb  demo-data-upload.ipynb  demo-minio.ipynb  demo-quadrant.ipynb  docker-compose-cloud.yaml  docker-compose-local.yaml  docker-compose.yaml  docker-entrypoint-interactive.sh  docker-entrypoint-qdrant-preload.sh  pyproject.toml
.ipynb_checkpoints/: demo-api-checkpoint.ipynb
.streamlit/: config.toml
api/: __init__.py  main.py  models.py  routes.py  utils.py
common/: __init__.py  consts.py  global_utils.py  handler_cloud.py  handler_env.py  handler_local.py  utils.py
interactive/: __init__.py  app_utils.py  searchApp.py  search_app.py  st_utils.py  style.css  widget_style.css
metrics/: __init__.py  consts.py  core.py  indexer.py  nets.py  train.py  utils.py
notebooks/: demo-api.ipynb  demo-data-upload.ipynb  demo-minio.ipynb  demo-qdrant.ipynb  demo-quadrant.ipynb
preload/: __init__.py  preload_qdrant_data.py
scripts/: __init__.py  docker-entrypoint-interactive.sh  preload_qdrant_data.py
